Remove javafx from project